Fixed z-index for toolbar and side menu

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,7 +5,7 @@ $side-menu-size: 64px
   position: fixed
   top: 0
   width: 100%
-  z-index: 9999
+  z-index: 10
 
 .ps-main-content
   padding-top: $toolbar-size
@@ -17,4 +17,4 @@ $side-menu-size: 64px
   left: 0
   top: $toolbar-size
   height: 100vh
-  z-index: 999
+  z-index: 9
